2009-12-02  Markus Gutschke  <markus@shellinabox.com>

	* Added fallback code that dynamically computes the correct commandline
	arguments for "objcopy" if building for an otherwise unknown target
	platform.

2009-12-01  Markus Gutschke  <markus@shellinabox.com>

	* Added some basic sanity checks to the commit script that now makes
	sure we at least attempt to keep copyright dates updated whenever we
	make changes.

	* Added checks that the debian/changelog file is up-to-date

	* Added debian/watch file

	* Updated the Standards-Version in debian/control. Still need to
	review whether we are in full compliance, though.

	* Fixed lintian errors.

2009-11-29  Markus Gutschke  <markus@shellinabox.com>

	* Preparations for packaging ShellInABox in a way that makes it
	easy for Debian package maintainers to pick it up.

2009-11-25  Markus Gutschke  <markus@shellinabox.com>

	* On browsers that support CSS transforms, enable switching between
	  80 and 132 column mode.

2009-11-21  Markus Gutschke  <markus@shellinabox.com>

	* Updated manual page documenting --user-css

	* Released version 2.10

2009-11-18  Markus Gutschke  <markus@shellinabox.com>

	* Fixed some compiler warnings when using more recent versions of
	gcc and glibc.

	* Tweak the handling of CTRL keys, so that some of the more unusual
	combinations work. For historic reasons, there is an expectation that
	CTRL-3..CTRL-8 return specific control characters. Also fixed the
	handling of CTRL-\ which could cause problems with some browsers.

	* Rely on the browser for capitalization. This should fix Capslock
	behavior. Hopefully, it won't break any other keyboard features or
	layouts.

2009-08-20  Markus Gutschke  <markus@shellinabox.com>

	* Added transparent printing support. The development of this
	feature is sponsored by De Bortoli Wines Pty Limited and by
	Eternity Technologies.

2009-08-19  Markus Gutschke  <markus@shellinabox.com>

	* Added a ${url} parameter that can be used in the service description.