@@ -2,7 +2,7 @@ AC_PREREQ(2.57)
 
 dnl This is the one location where the authoritative version number is stored
 AC_INIT(shellinabox, 2.10, markus@shellinabox.com)
-VCS_REVISION=197
+VCS_REVISION=198
 AC_SUBST(VCS_REVISION)
 AC_DEFINE_UNQUOTED(VCS_REVISION, "${VCS_REVISION}",
                    [Most recent revision number in the version control system])
@@ -54,6 +54,19 @@ AC_TRY_LINK([#include <pthread.h>
             [sigset_t s; int n; sigwait(&s, &n);],
             [AC_DEFINE(HAVE_SIGWAIT, 1,
                        Define to 1 if you have a working sigwait)])
+
+dnl On some systems, calling /bin/login does not work. Disable the LOGIN
+dnl feature, if the user tells us that it does not do the right thing.
+AC_ARG_ENABLE(login,
+              [  --disable-login           on some systems (e.g. Fedora), calling /bin/login
+                            does not work well. If you know that your system
+                            suffers from this problem, set this option to
+                            remove support for the LOGIN keyword in the
+                            service description.])
+if test "x$enable_login" != xno; then
+  AC_DEFINE(HAVE_BIN_LOGIN, 1,
+                                Set if you want support for calling /bin/login)
+fi
 
 dnl We automatically detect SSL support, but allow users to disable it
 AC_ARG_ENABLE(ssl,
